form is now hidden upon submission and dummy test is displayed

--- a/exercises/07-Form-Validation/07-Form-Validation.html
+++ b/exercises/07-Form-Validation/07-Form-Validation.html
@@ -100,7 +100,11 @@
                 </button>
               </div>
             </form>
-            <div id="box"></div>
+            <div id="box">
+              <div id="completed-form" class='completed-form'>
+                ARRAY
+              </div>
+            </div>
           </div>
         </div>
       </div>
