Completed from now displays user input after submission and added a clear button

--- a/exercises/07-Form-Validation/07-Form-Validation.html
+++ b/exercises/07-Form-Validation/07-Form-Validation.html
@@ -98,11 +98,14 @@
                 <button class="btn btn--radius btn--green" type="submit">
                   Submit
                 </button>
+                <button class="btn btn--radius btn--grey" type="clear">
+                    Clear
+                  </button>
               </div>
             </form>
-            <div id="box">
+            <div id="box" class='box'>
+              <h2 style="margin-bottom: 20px; display: flex; justify-content: center; align-items: center; text-decoration: underline;">Submitted Information</h2>
               <div id="completed-form" class='completed-form'>
-                ARRAY
               </div>
             </div>
           </div>
