Refactored Using forEach to loop over content instead of a bunch of if/else statements when adding or removing the "error" class as well as the "error text" in the input fields

--- a/exercises/07-Form-Validation/07-Form-Validation.html
+++ b/exercises/07-Form-Validation/07-Form-Validation.html
@@ -98,7 +98,7 @@
                 <button class="btn btn--radius btn--green" type="submit">
                   Submit
                 </button>
-                <button class="btn btn--radius btn--grey" type="clear">
+                <button class="btn btn--radius btn--grey" onclick="formReset()" type="clear">
                     Clear
                   </button>
               </div>
