--- a/exercises/WeatherApp/index.html
+++ b/exercises/WeatherApp/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <div id="main">
-  <h1>The weather in: </h1>
+  <h1>The weather in </h1>
   <div class='region-container'>
     <span id='city' class="wi"></span>, <span id='state' class="wi"></span>
   </div>
